# pbIterativeSolver

./: .clang_complete  .gitignore  .nfs0000000a2a41ff070000000b  .nfs0000000a2c22000000000006  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.orig  README  README.md  cmake_install.cmake  dirs.sh  gmon.out  gmon.out_O2  gmon.out_O3  grid_1000cells_log.dat_rev  k_class__opt_profile  k_class_profile  pbIterativeSolver  pbIterativeSolver (vienna's conflicted copy 2014-08-21)  pbIterativeSolver_Ofast  pbIterativeSolver_no_precalc  pbIterativeSolver_release  pbSolverIterative_source.ps  prep  profile  profile_O1  profile_O2  profile_O3  profile_Ofast  readgrid  readgrid.c++  slurm-275.out  slurm-276.out  slurm.ajs224.cares004.270.err  slurm.ajs224.cares005.272.err  submit_0d.sh  submit_1d.sh  submit_continuum.sh  submit_freemolecular.sh  (+3 more)
include/: Cell.h  Kernel.h  Particle.h  Solver.h  blurb.h  kernel.h  mfa_analytic.h  mfa_functions.h  mfa_params.h  random.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations (satsuma's conflicted copy 2014-09-09).xml  configurations.xml  private (satsuma's conflicted copy 2014-09-29).xml  private.xml
old/include/: mfa_params.h
old/source/: kernel.c++  moments.c++  pbIterativeSolver.c++  theta.c++
old_scripts/: submit_continuum.sh  submit_freemolecular.sh
source/: Cell (kraft's conflicted copy 2015-09-22).c++  Cell (satsuma's conflicted copy 2014-09-09).c++  Cell (satsuma's conflicted copy 2014-09-12 (1)).c++  Cell (satsuma's conflicted copy 2014-09-12).c++  Cell (satsuma's conflicted copy 2014-09-18).c++  Cell.c++  Particle.c++  Solver (satsuma's conflicted copy 2014-09-12).c++  Solver.c++  blurb.c++  kernel.c++  mfa_params.c++  n_in.c++  newfile.cpp  parse_args (vienna's conflicted copy 2014-08-21).c++  parse_args.c++  pbIterativeSolver (vienna's conflicted copy 2014-08-21).c++  pbIterativeSolver.c++  pbIterativeSolver.c++_attempt  pbIterativeSolver.c++_bak  pbIterativeSolver.c++_tidyroutines  readGrid.c++
tst_runs/: pbIterativeSolver
